--- a/WMS/Views/Theme/Modern/Shared/_ProductPopups.cshtml
+++ b/WMS/Views/Theme/Modern/Shared/_ProductPopups.cshtml
@@ -96,7 +96,29 @@
         settings.LoadContentViaCallback = LoadContentViaCallback.OnFirstShow;
         settings.CallbackRouteValues = new { Controller = "Products", Action = "_AttributeValueCreate", Method = "GET" };
         settings.Width = 600;
-        settings.Height = 240;
+        settings.Height = 350;
+        settings.AllowDragging = true;
+        settings.CloseAction = CloseAction.CloseButton;
+        settings.CloseOnEscape = true;
+        settings.PopupAnimationType = DevExpress.Web.AnimationType.None;
+        settings.ShowHeader = false;
+        settings.Modal = true;
+        settings.AutoUpdatePosition = true;
+        settings.PopupHorizontalAlign = PopupHorizontalAlign.WindowCenter;
+        settings.PopupVerticalAlign = PopupVerticalAlign.WindowCenter;
+        settings.ScrollBars = System.Web.UI.WebControls.ScrollBars.Vertical;
+        settings.ClientSideEvents.EndCallback = "pcModalAttributesValues_EndCallback";
+        //settings.ClientSideEvents.CloseUp = "function(s, e){ ASPxClientEdit.ClearEditorsInContainer(null, '', true); }";
+    }).GetHtml()
+
+@Html.DevExpress().PopupControl(
+    settings =>
+    {
+        settings.Name = "pcModalAttributes";
+        settings.LoadContentViaCallback = LoadContentViaCallback.OnFirstShow;
+        settings.CallbackRouteValues = new { Controller = "Products", Action = "_AttributeCreate", Method = "GET" };
+        settings.Width = 400;
+        settings.Height = 200;
         settings.AllowDragging = true;
         settings.CloseAction = CloseAction.CloseButton;
         settings.CloseOnEscape = true;
@@ -110,15 +132,14 @@
 
         //settings.ClientSideEvents.CloseUp = "function(s, e){ ASPxClientEdit.ClearEditorsInContainer(null, '', true); }";
     }).GetHtml()
-
 @Html.DevExpress().PopupControl(
     settings =>
     {
-        settings.Name = "pcModalAttributes";
+        settings.Name = "pcModalAttributeValues";
         settings.LoadContentViaCallback = LoadContentViaCallback.OnFirstShow;
-        settings.CallbackRouteValues = new { Controller = "Products", Action = "_AttributeCreate", Method = "GET" };
+        settings.CallbackRouteValues = new { Controller = "Products", Action = "_AttrValueCreate", Method = "GET" };
         settings.Width = 400;
-        settings.Height = 200;
+        settings.Height = 250;
         settings.AllowDragging = true;
         settings.CloseAction = CloseAction.CloseButton;
         settings.CloseOnEscape = true;
