--- a/WarehouseEcommerce/Content/Theme/University/app/css/App.css
+++ b/WarehouseEcommerce/Content/Theme/University/app/css/App.css
@@ -395,7 +395,7 @@ input[type="number"]::-webkit-outer-spin-button {
                     }
 
                         .nb_header .nb_mainnav > ul > li.hav_sub_nav .nb_subnavWrap > ul.nb_f_snList {
-                            color: var(--light-font-color);
+                            background-color: var(--tertiary-color);
                             width: 100%;
                             float: left;
                             margin: 0px;
@@ -440,7 +440,7 @@ input[type="number"]::-webkit-outer-spin-button {
                                         position: absolute;
                                         left: 100%;
                                         top: 0px;
-                                        color: var(--light-font-color);
+                                        background-color: var(--tertiary-color);
                                         box-shadow: 0px 0px 10px -5px #111;
                                         z-index: 100;
                                         opacity: 0;
@@ -541,7 +541,7 @@ input[type="number"]::-webkit-outer-spin-button {
                         overflow: hidden;
                         position: relative;
                         color: var(--light-font-color);
-                        background-color: var(--body-background-color);
+                        background-color: var(--tertiary-color);
                     }
 
                         .nb_header .nb_mainnav > ul li.hav_mega_nav .mega_nav_wrap .mega_nav_wrap_inner .head {
@@ -841,7 +841,7 @@ input[type="number"]::-webkit-outer-spin-button {
         .nb_bannersec .np_bannerContentOuter .nb_bnr_count:after {
             content: "";
             width: 3px;
-            color: var(--light-font-color);
+            background-color: var(--tertiary-color);
             height: 100%;
             position: absolute;
         }
@@ -890,7 +890,7 @@ input[type="number"]::-webkit-outer-spin-button {
     width: 100%;
     float: left;
     padding: 90px 0px 95px 0px;
-    color: var(--light-font-color);
+    background-color: var(--tertiary-color);
 }
 
 .nb_header_style1 {
@@ -1104,7 +1104,7 @@ input[type="number"]::-webkit-outer-spin-button {
             .nb_sub_sec .nb_sub_wrap .sub_form_wrap .nb_home_sub_form .sf_input_wrap {
                 width: 100%;
                 position: relative;
-                color: var(--light-font-color);
+                background-color: var(--tertiary-color);
                 padding-right: 50px;
             }
 
@@ -1261,7 +1261,7 @@ input[type="number"]::-webkit-outer-spin-button {
                         width: 42px;
                         height: 42px;
                         border-radius: 50%;
-                        color: var(--light-font-color);
+                        background-color: var(--tertiary-color);
                         text-align: center;
                         display: flex;
                         align-items: center;
@@ -1317,7 +1317,7 @@ input[type="number"]::-webkit-outer-spin-button {
                     position: absolute;
                     right: 0;
                     top: 6px;
-                    color: var(--light-font-color);
+                    background-color: var(--tertiary-color);
                 }
 
             .nb_footer .nb_footersec_inner .nb_footnav_wrap ul li:last-child a {
@@ -1440,7 +1440,7 @@ input[type="number"]::-webkit-outer-spin-button {
     position: fixed;
     width: 320px;
     overflow-x: auto;
-    color: var(--light-font-color);
+    background-color: var(--tertiary-color);
     height: 100%;
     left: 0;
     top: 0;
@@ -2513,7 +2513,7 @@ input[type="number"]::-webkit-outer-spin-button {
 .ZoomViewWrapper {
     width: 100%;
     height: 100%;
-    color: var(--light-font-color);
+    background-color: var(--tertiary-color);
     position: fixed;
     z-index: 110;
     left: 0;
@@ -2674,7 +2674,7 @@ body.ZoomerActive {
         display: inline-block;
         margin-bottom: 28px;
         width: 100%;
-        color: var(--light-font-color);
+        background-color: var(--tertiary-color);
         padding: 10px 0px;
         transition: all 0.3s ease;
         box-shadow: 0px 0px 23px 2px #d8d8d8;
@@ -3136,7 +3136,7 @@ body.ZoomerActive {
                             height: 18px;
                             border: 1px solid #707070;
                             border-radius: 100%;
-                            background: var(--tertiary-color);
+                            background-color: var(--tertiary-color);
                         }
 
                         .basketTotalwrap .shipping_radiosec .shippingtyp_list li [type="radio"]:checked + label:after,
@@ -3976,7 +3976,7 @@ body.ZoomerActive {
                         height: 18px;
                         border: 1px solid #ddd;
                         border-radius: 100%;
-                        background: var(--tertiary-color);
+                        background-color: var(--tertiary-color);
                     }
 
                     .checkconfInner .checkconfirm_lftsec ul.paymentMthdlist li [type="radio"]:checked + label:after,
